--- a/geek-h5-react/public/index.html
+++ b/geek-h5-react/public/index.html
@@ -2,7 +2,7 @@
  * @Author: quan
  * @Date: 2022-05-24 22:35:44
  * @LastEditors: quan
- * @LastEditTime: 2022-05-26 23:48:07
+ * @LastEditTime: 2022-05-28 14:33:26
  * @Description: file content
 -->
 <!DOCTYPE html>
@@ -22,7 +22,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <script src="//at.alicdn.com/t/font_2503709_f4q9d13hktl.js"></script> -->
+    <script src="//at.alicdn.com/t/font_2503709_f4q9dl3hktl.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
